# test-todomvc

./: .gitignore  config.prod.env  pyproject.toml
etc/selenoid/: browsers.json  compose.yaml
run/: pull_browser_images.sh  start_up_selenoid_with_ui.sh
test_todomvc/: config.py
test_todomvc/model/: config.py  todomvc.py
tests/: conftest.py  test_functionalities_on_all_filter.py  test_todo_management.py
